# sigslot

./: .gitignore  CMakeLists.txt  README.md
include/: sigslot.h
